@startuml

title __BUTTONFACTORY's Class Diagram__\n

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        interface TFA.controlador.ButtonFactory.Button {
            {abstract} + onClick()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        abstract class TFA.controlador.ButtonFactory.ButtonCreator {
            - buttonComponent : JButton
            + ButtonCreator()
            {abstract} + createButton()
            + getButton()
            + operate()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.FGButton {
            + onClick()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.FGButtonCreator {
            + createButton()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.FTButton {
            + onClick()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.FTButtonCreator {
            + createButton()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.ReboundsButton {
            + onClick()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.ReboundsButtonCreator {
            + createButton()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.StealsTurnoverButton {
            + onClick()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.StealsTurnoversButtonCreator {
            + createButton()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.TPButton {
            + onClick()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.TPButtonCreator {
            + createButton()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.WinLossButton {
            + onClick()
        }
      }
    }
  }
  

  namespace TFA {
    namespace controlador {
      namespace ButtonFactory {
        class TFA.controlador.ButtonFactory.WinLossButtonCreator {
            + createButton()
        }
      }
    }
  }


  TFA.controlador.ButtonFactory.FGButton .up.|> TFA.controlador.ButtonFactory.Button
  TFA.controlador.ButtonFactory.FGButtonCreator -up-|> TFA.controlador.ButtonFactory.ButtonCreator
  TFA.controlador.ButtonFactory.FTButton .up.|> TFA.controlador.ButtonFactory.Button
  TFA.controlador.ButtonFactory.FTButtonCreator -up-|> TFA.controlador.ButtonFactory.ButtonCreator
  TFA.controlador.ButtonFactory.ReboundsButton .up.|> TFA.controlador.ButtonFactory.Button
  TFA.controlador.ButtonFactory.ReboundsButtonCreator -up-|> TFA.controlador.ButtonFactory.ButtonCreator
  TFA.controlador.ButtonFactory.StealsTurnoverButton .up.|> TFA.controlador.ButtonFactory.Button
  TFA.controlador.ButtonFactory.StealsTurnoversButtonCreator -up-|> TFA.controlador.ButtonFactory.ButtonCreator
  TFA.controlador.ButtonFactory.TPButton .up.|> TFA.controlador.ButtonFactory.Button
  TFA.controlador.ButtonFactory.TPButtonCreator -up-|> TFA.controlador.ButtonFactory.ButtonCreator
  TFA.controlador.ButtonFactory.WinLossButton .up.|> TFA.controlador.ButtonFactory.Button
  TFA.controlador.ButtonFactory.WinLossButtonCreator -up-|> TFA.controlador.ButtonFactory.ButtonCreator

    TFA.controlador.ButtonFactory.ButtonCreator ..> TFA.controlador.ButtonFactory.Button

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
